更新首页布局
--story=1003770 --user=柳鑫

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -37,7 +37,7 @@
     ]
   },
   "window": {
-    "navigationBarBackgroundColor": "#00a8f3",
+    "navigationBarBackgroundColor": "#81d8cf",
     "navigationBarTextStyle": "black"
   },
   "sitemapLocation": "sitemap.json"
