完成 lost 展示页面与 found 展示页面
--story=1003792 --user=柳鑫

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -8,7 +8,8 @@
     "pages/create/lost_create/lost_create",
     "pages/create/find_create/find_create",
     "pages/lost/lost",
-    "pages/send/send"
+    "pages/send/send",
+    "pages/found/found"
   ],
   "tabBar": {
     "color": "#7f8389",
