--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -11,34 +11,34 @@
     "pages/found/found"
   ],
   "tabBar": {
-    "color": "#7f8389",
-    "selectedColor": "#00a8f3",
+    "color": "#707070",
+    "selectedColor": "#81d8cf",
     "borderStyle": "black",
-    "backgroundColor": "#f7f7fa",
+    "backgroundColor": "#f7f7f7",
     "list": [
       {
         "pagePath": "pages/index/index",
-        "text": "首页",
-        "iconPath": "images/home.png",
-        "selectedIconPath": "images/home1.png"
+        "text": "首 页",
+        "iconPath": "images/home1.png",
+        "selectedIconPath": "images/home2.png"
       },
       {
         "pagePath": "pages/create/create",
-        "text": "发布",
-        "iconPath": "images/broad_un.png",
-        "selectedIconPath": "images/broad_active.png"
+        "text": "发 布",
+        "iconPath": "images/send1.png",
+        "selectedIconPath": "images/send2.png"
       },
       {
         "pagePath": "pages/mine/mine",
-        "text": "我的",
-        "iconPath": "images/mine.png",
-        "selectedIconPath": "images/mine1.png"
+        "text": "我 的",
+        "iconPath": "images/mine1.png",
+        "selectedIconPath": "images/mine2.png"
       }
     ]
   },
   "window": {
     "navigationBarBackgroundColor": "#81d8cf",
-    "navigationBarTextStyle": "black"
+    "navigationBarTextStyle": "white"
   },
   "sitemapLocation": "sitemap.json"
 }
