--- a/project.config.json
+++ b/project.config.json
@@ -37,7 +37,7 @@
     "packNpmRelationList": [],
     "minifyWXSS": true
   },
-  "appid": "wxf3a544db34c0f850",
+  "appid": "wx70ecaaaafe06e6e2",
   "projectname": "拾与失",
   "libVersion": "2.14.1",
   "simulatorType": "wechat",
