完成我的发布
--story=1003966 --user=柳鑫

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -9,7 +9,8 @@
     "pages/lost/lost",
     "pages/send/send",
     "pages/found/found",
-    "pages/myfound/myfound"
+    "pages/myfound/myfound",
+    "pages/mylost/mylost"
   ],
   "tabBar": {
     "color": "#707070",
